--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,6 +1,15 @@
 <!-- Google analytics -->
 {% if site.ga %}
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga.id }}"></script>
   <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', '{{ site.ga.id }}');
+  </script>
+
+  <!-- <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -10,7 +19,7 @@
     ga('require', '{{ site.go.id }}');
     ga('send', 'pageview');
 
-  </script>
+  </script> -->
 {% endif %}
 
 <!-- GrowingIO -->
