feat(projects): project list with repositories

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2362,6 +2362,9 @@ body {
   span.navy {
     color: #3385FF;
   }
+  span.lightnavy {
+    color: #0a1f3f;
+  }
   p.text-color {
     color: #676a6c;
   }
